{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "c30c7276-fdfb-5483-212a-9a3c0302bd15",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:network-acl/acl-0f8f9c7fa235aab69",
            "default_network_acl_id": "acl-0f8f9c7fa235aab69",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f8f9c7fa235aab69",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112672291",
            "subnet_ids": [
              "subnet-03a7997c69f360d6b",
              "subnet-0baefda080b104937",
              "subnet-0c9863298bd63c191",
              "subnet-0e355cba790bc6c8f"
            ],
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-0d1e444abf8b773be",
            "default_route_table_id": "rtb-0d1e444abf8b773be",
            "id": "rtb-0d1e444abf8b773be",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:security-group/sg-03d1c6167ebfb61e0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03d1c6167ebfb61e0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112672291",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:internet-gateway/igw-062b30a43f24f1788",
            "id": "igw-062b30a43f24f1788",
            "owner_id": "471112672291",
            "tags": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062b30a43f24f1788",
            "id": "r-rtb-0e9932016cda3294c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9932016cda3294c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-07e545a27a9160d2a",
            "id": "rtb-07e545a27a9160d2a",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-0f1757752825d4c11",
            "id": "rtb-0f1757752825d4c11",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-0e9932016cda3294c",
            "id": "rtb-0e9932016cda3294c",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062b30a43f24f1788",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "t_abeginner-public",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447efc16928c9d0b",
            "route_table_id": "rtb-07e545a27a9160d2a",
            "subnet_id": "subnet-0baefda080b104937"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aafa0e4d29f2903b",
            "route_table_id": "rtb-0f1757752825d4c11",
            "subnet_id": "subnet-0e355cba790bc6c8f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c85c7ae31dd4777c",
            "route_table_id": "rtb-0e9932016cda3294c",
            "subnet_id": "subnet-03a7997c69f360d6b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20affc6368b79e3",
            "route_table_id": "rtb-0e9932016cda3294c",
            "subnet_id": "subnet-0c9863298bd63c191"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-0baefda080b104937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baefda080b104937",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-0e355cba790bc6c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e355cba790bc6c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-03a7997c69f360d6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a7997c69f360d6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-public-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-0c9863298bd63c191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9863298bd63c191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-public-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-049ac8e41e558a46e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:vpc/vpc-049ac8e41e558a46e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0f8f9c7fa235aab69",
            "default_route_table_id": "rtb-0d1e444abf8b773be",
            "default_security_group_id": "sg-03d1c6167ebfb61e0",
            "dhcp_options_id": "dopt-0807cf1ac279cf33d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049ac8e41e558a46e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1e444abf8b773be",
            "owner_id": "471112672291",
            "tags": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "website": "https://www.youtube.com/@adevopsbeginner"
            }
          }
        }
      ]
    }
  ]
}